==> Infineon/optiga-trust-x/pal/libusb/pal_i2c.c <==
#include "optiga/pal/pal_i2c.h"
#include "libusb.h"
#include <libusb-1.0/libusb.h>
#include <unistd.h>
#include "pal_usb.h"
#include "pal_common.h"
#define LOG_PAL IFX_I2C_LOG
#include<stdio.h>
#define LOG_PAL(...) //printf(__VA_ARGS__)

pal_status_t pal_i2c_write(pal_i2c_t * p_i2c_context, uint8_t * p_data, uint16_t length)
{
    pal_status_t status = PAL_STATUS_FAILURE;
    int32_t usb_lib_status;
    int32_t transfered = 0;
    pal_usb_t * pal_usb;
    uint8_t report[HID_REPORT_SIZE] = {0};

    pal_usb = (pal_usb_t * ) p_i2c_context->p_i2c_hw_config;
    report[0] = REPORT_ID_I2C_WRITE_REQ;
    report[1] = p_i2c_context->slave_address;
    report[2] = I2C_FLAG_START | I2C_FLAG_STOP;
    report[3] = (uint8_t)length;

    memcpy(&report[4], p_data, length);
    //Acquire the I2C bus before read/write

    if (PAL_STATUS_SUCCESS == pal_i2c_acquire(p_i2c_context))
    {
        gp_pal_i2c_current_ctx = p_i2c_context;

        //Invoke the low level i2c master driver API to write to the bus
        usb_lib_status = libusb_interrupt_transfer(pal_usb->handle,
                                                   pal_usb->hid_ep_out,
                                                   report,
                                                   sizeof(report),
                                                   &transfered,
                                                   USB_TIMEOUT);
        if (usb_lib_status != 0 || transfered != HID_REPORT_SIZE)
        {
            //If I2C Master fails to invoke the write operation, invoke upper layer event handler with error.
            //lint --e{611} suppress "void* function pointer is type casted to app_event_handler_t type"
            ((app_event_handler_t)(p_i2c_context->upper_layer_event_handler))
                                                       (p_i2c_context->upper_layer_ctx, PAL_I2C_EVENT_ERROR);
            //Release I2C Bus
            pal_i2c_release((void * )p_i2c_context);
        }
        else
        {
            if (usb_i2c_poll_operation_result(p_i2c_context) == PAL_STATUS_SUCCESS)
            {
                i2c_master_end_of_transmit_callback();
                status = PAL_STATUS_SUCCESS;
            }
            else
            {
                invoke_upper_layer_callback(gp_pal_i2c_current_ctx, PAL_I2C_EVENT_ERROR);
            }
        }
    }
    else
    {
        status = PAL_STATUS_I2C_BUSY;
        //lint --e{611} suppress "void* function pointer is type casted to app_event_handler_t type"
        ((app_event_handler_t)(p_i2c_context->upper_layer_event_handler))
                                                        (p_i2c_context->upper_layer_ctx, PAL_I2C_EVENT_BUSY);
    }

    return status;
}

pal_status_t pal_i2c_read(pal_i2c_t * p_i2c_context, uint8_t * p_data, uint16_t length)
{
    int32_t usb_lib_status = PAL_STATUS_FAILURE;
    int32_t transfered;
    uint8_t report[HID_REPORT_SIZE] = {0};
    uint16_t rx_result;
    pal_usb_t * pal_usb;
    LOG_PAL("[IFX-HAL]: I2C RX (%d)\n", length);

    report[0] = REPORT_ID_I2C_READ_REQ;
    report[1] = p_i2c_context->slave_address;
    report[2] = I2C_FLAG_START | I2C_FLAG_STOP;
    report[3] = (uint8_t)length;
    report[4] = 0;
    pal_usb = (pal_usb_t * ) p_i2c_context->p_i2c_hw_config;
    //Acquire the I2C bus before read/write
    if (PAL_STATUS_SUCCESS == pal_i2c_acquire(p_i2c_context))
    {
        gp_pal_i2c_current_ctx = p_i2c_context;
        usb_lib_status = libusb_interrupt_transfer(pal_usb->handle,
                                                   pal_usb->hid_ep_out,
                                                   report,
                                                   sizeof(report),
                                                   &transfered,
                                                   USB_TIMEOUT);
        LOG_PAL("[IFX-HAL]: HID Write status = %d, %d\n", usb_lib_status, transfered);
        if (usb_lib_status)
        {
            LOG_PAL("[IFX-HAL]: libusb_interrupt_transfer ERROR %d\n.", usb_lib_status);
            //lint --e{611} suppress "void* function pointer is type casted to app_event_handler_t type"
            ((app_event_handler_t)(p_i2c_context->upper_layer_event_handler))
                                                       (p_i2c_context->upper_layer_ctx, PAL_I2C_EVENT_ERROR);
            return usb_lib_status;
        }
        //Invoke the low level i2c master driver API to read from the bus
        memset(report, 0x00, sizeof(report));
        transfered = 0;
        usb_lib_status = libusb_interrupt_transfer(pal_usb->handle,
                                                   pal_usb->hid_ep_in,
                                                   report,
                                                   sizeof(report),
                                                   &transfered,
                                                   USB_TIMEOUT);
        rx_result = usb_i2c_poll_operation_result(p_i2c_context);
        if (rx_result == PAL_STATUS_SUCCESS && usb_lib_status == 0 && transfered >= (2 + length) && report[1] == length)
        {
            memcpy(p_data, &report[2], report[1]);
            usb_lib_status = PAL_STATUS_SUCCESS;
            i2c_master_end_of_receive_callback();
        }
        else
        {
            //lint --e{611} suppress "void* function pointer is type casted to app_event_handler_t type"
            ((app_event_handler_t)(p_i2c_context->upper_layer_event_handler))
                                                        (p_i2c_context->upper_layer_ctx, PAL_I2C_EVENT_ERROR);
            //Release I2C Bus
            pal_i2c_release((void * )p_i2c_context);
        }
    }
    else
    {
        usb_lib_status = PAL_STATUS_I2C_BUSY;
        //lint --e{611} suppress "void* function pointer is type casted to app_event_handler_t type"
        ((app_event_handler_t)(p_i2c_context->upper_layer_event_handler))
                                                        (p_i2c_context->upper_layer_ctx, PAL_I2C_EVENT_BUSY);
    }
    return usb_lib_status;
}
